fix z-index bug

--- a/_sass/profile.scss
+++ b/_sass/profile.scss
@@ -31,7 +31,6 @@
         position: absolute; 
         height: 320px;
         width: 100%;
-        z-index: -999;
     }
 
 
